<resources>
    <string name="app_name">Predicto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="disease_1">Diabetes</string>
    <string name="disease_2">Breast Cancer</string>
    <string name="result_activity_name">Predicto</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="communicate_tag">Communicate</string>
    <string name="nav_drawer_app_name">Predicto</string>

    <string name="br_cr_param1">Mean Texture</string>
    <string name="br_cr_param2">Mean Perimeter</string>
    <string name="br_cr_param3">Mean Smoothness</string>
    <string name="br_cr_param4">Compactness</string>
    <string name="br_cr_param5">Mean Symmetry</string>

    <string name="di_param1">Gender</string>
    <string name="di_param2">Pregnancies</string>
    <string name="di_param3">Glucose</string>
    <string name="di_param4">Blood Pressure</string>
    <string name="di_param5">Skin Thickness</string>
    <string name="di_param6">Insulin</string>
    <string name="di_param7">BMI</string>
    <string name="di_param8">DPF</string>
    <string name="di_param9">Age</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="header_text_breastCancer_details_grid">Enter tumor details...</string>
    <string name="header_text_diabetes_details_grid">Enter details...</string>
    <string name="br_cr_evaluate_button_text">Predict Tumor Type</string>
    <string name="di_evaluate_button_text">Predict Results</string>
    <string name="resultAc_label1_text">Prediction Results</string>
    <string name="resultAc_default_text">Hello how are you doing sir</string>
    <string name="resultAc_breast_cancer_positive">Our algorithm have predicted that your tumor is a cancerous tumor</string>
    <string name="resultAc_breast_cancer_negative">Our algorithm have predicted that your tumor is not a cancerous tumor</string>
    <string name="resultAc_label2_text">Prediction accuracy :  </string>
    <string name="resultAc_diabetes_negative">Our algorithm have predicted that you are not diabetic.</string>
    <string name="resultAc_diabetes_positive">Our algorithm have predicted that you are diabetic.</string>
    <string name="nav_list1">Medical</string>
    <string name="nav_list2">Human Resource</string>
    <string name="nav_list3">Fun</string>
    <string name="hr_1">Traits Predictor</string>
    <string name="fun_1">Sentiment Analysis</string>
    <string name="fun_2">Movie Recommender</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>

