<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.poseidon.predicto.DiabetesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/header_text_diabetes_details_grid"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:padding="@dimen/grid_padding"
        android:rowCount="9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:columnCount="2">


        <TextView
            android:id="@+id/param1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_marginTop="8dp"
            android:layout_row="0"
            android:labelFor="@+id/param1edit"
            android:text="@string/di_param1"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_column="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_row="0"
            android:dropDownWidth="match_parent"
            android:entries="@array/Gender"/>

        <TextView
            android:id="@+id/param2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="8"
            android:labelFor="@+id/param2edit"
            android:text="@string/di_param2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param2edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="8"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="1" />

        <TextView
            android:id="@+id/param3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="1"
            android:labelFor="@+id/param3edit"
            android:text="@string/di_param3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param3edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="85" />

        <TextView
            android:id="@+id/param4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="2"
            android:labelFor="@+id/param4edit"
            android:text="@string/di_param4"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param4edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="66" />

        <TextView
            android:id="@+id/param5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="3"
            android:labelFor="@+id/param5edit"
            android:text="@string/di_param5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param5edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="29" />

        <TextView
            android:id="@+id/param6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="4"
            android:labelFor="@+id/param6edit"
            android:text="@string/di_param6"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param6edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0" />

        <TextView
            android:id="@+id/param7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="5"
            android:labelFor="@+id/param7edit"
            android:text="@string/di_param7"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param7edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="26" />

        <TextView
            android:id="@+id/param8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="6"
            android:labelFor="@+id/param8edit"
            android:text="@string/di_param8"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param8edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0.351" />

        <TextView
            android:id="@+id/param9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="7"
            android:labelFor="@+id/param9edit"
            android:text="@string/di_param9"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param9edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="31" />


    </GridLayout>

    <Button
        android:id="@+id/DiabetesAC_predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/di_evaluate_button_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</android.support.constraint.ConstraintLayout>
