<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.poseidon.predicto.BreastCancerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/header_text_breastCancer_details_grid"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="@dimen/grid_padding"
        android:rowCount="5"
        tools:columnCount="2"
        android:id="@+id/gridLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/param1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="0"
            android:labelFor="@+id/param1edit"
            android:text="@string/br_cr_param1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param1edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@+id/param1"
            android:maxLines="1"
            android:text="11.37" />

        <TextView
            android:id="@+id/param2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="1"
            android:labelFor="@+id/param2edit"
            android:text="@string/br_cr_param2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param2edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="134.75" />

        <TextView
            android:id="@+id/param3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="2"
            android:labelFor="@+id/param3edit"
            android:text="@string/br_cr_param3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param3edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0.1234" />

        <TextView
            android:id="@+id/param4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="3"
            android:labelFor="@+id/param4edit"
            android:text="@string/br_cr_param4"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param4edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0.2145" />

        <TextView
            android:id="@+id/param5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="@dimen/grid_col1_right_margin"
            android:layout_row="4"
            android:labelFor="@+id/param5edit"
            android:text="@string/br_cr_param5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/param5edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0.252" />
    </GridLayout>

    <Button
        android:id="@+id/BreastCancerAC_predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/br_cr_evaluate_button_text"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
