<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.poseidon.predicto.ResultActivity">

    <LinearLayout
        android:id="@+id/resultLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultAc_lable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultAc_label1_text"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/resultAc_para1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/resultAc_default_text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/resultAc_lable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/resultAc_label2_text"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="395dp"
        android:layout_height="425dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="170dp">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
